<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        app:strokeColor="@android:color/darker_gray"
        android:textStyle="bold"
        tools:text="#"/>

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        app:strokeColor="@android:color/darker_gray"
        android:layout_weight="2"
        android:textStyle="bold"
        tools:text="@string/team"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_played"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:strokeColor="@android:color/darker_gray"
            android:gravity="center"
            tools:text="@string/played"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tv_win"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/win" />

        <TextView
            android:id="@+id/tv_draw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/draw" />

        <TextView
            android:id="@+id/tv_loss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/loss" />

        <TextView
            android:id="@+id/tv_goalsFor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/goalsFor" />

        <TextView
            android:id="@+id/tv_goalsAgainst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/goalsAgainst" />

        <TextView
            android:id="@+id/tv_goalsDifference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/goalsDifference" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/total" />

    </LinearLayout>

</LinearLayout>