<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.league.detail.LeagueDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_league_banner"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="fitXY"
                tools:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/img_league_badge"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/image_badge"
                    android:scaleType="fitXY"
                    tools:srcCompat="@tools:sample/avatars[15]" />

                <LinearLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_league_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/tv_league_formed_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/tv_league_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_country_black_24dp"
                        android:drawablePadding="5dp"
                        android:textStyle="bold"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/tv_league_website"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_website_black_24dp"
                        android:drawablePadding="5dp"
                        android:maxLines="1"
                        android:textStyle="bold"
                        tools:text="TextView" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/overview"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_league_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>